gccida/g3/apply_delayed_renames
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/apply_delayed_renames/src/ssa.c:1282:26: error: use of undeclared identifier 'machine_mode'
old_reg = gen_reg_rtx( ( machine_mode)v4); 
                         ^
1 error generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/apply_delayed_renames/src/obj/ssa.o] Error 1
